@@ -5,8 +5,10 @@ namespace SmartPlate.API.Dto.StolenCars
 {
     public class StolenCarForCreationDto
     {
-        [Required]
+
         public int CarId { get; set; }
+
+        public string PlateNumber { get; set; }
 
         public string LastLocation { get; set; }
 
@@ -14,13 +16,15 @@ namespace SmartPlate.API.Dto.StolenCars
 
         public double Latitude { get; set; }
 
+        [Required]
         public DateTime DateStoled { get; set; }
 
         /// <summary>
-        /// 0 For car, 1 is plate
+        /// 0 For car, 1 is plate,
+        /// Ignore it.
         /// </summary>
-        [Required]
-        public byte CarOrPlateIsStoled { get; set; } // 0 For car, 1 is plate
+        
+        public byte CarOrPlateIsStoled { get; set; } = 0; // 0 For car, 1 is plate
 
     }
 }
