@@ -15,3 +15,12 @@
 [10/6/2019]
 - Add Reported as stolen when display cars info.
 - Add mark plate is stolen when trying to stole it.
+
+[13/6/2019]
+- Refactor code for readability and optimization
+= All
+	- Add get cars for specific user (can use it for current logged in user)
+	- Now user can report car is stolen by car plate number
+= Web
+	- Add get all stolen cars list
+	- Add get all cars list
